--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,3 +1,58 @@
 *, *::before, *::after {
     box-sizing: border-box;
+    font-family: sans-serif;
+    font-weight: normal;
+}
+
+body {
+    padding: 0;
+    margin: 0;
+    background: linear-gradient(to right, #d8b3df, #5b046d);
+}
+
+.calculator-grid {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+}
+
+.calculator-grid > button {
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: none;
+    background-color: rgba(255, 255, 255 , .75);
+}
+
+.calculator-grid > button:hover {
+    background-color: rgb(255, 255, 255, .9);
+}
+
+.span-two {
+    grid-column: span 2;
+}
+
+.output {
+    grid-column: 1 / -1;
+    background-color: rgba(51, 3, 3, 0.795);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 20px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.output .previous-operand {
+    color: rgba(134, 229, 234, 0.955);
+    font-size: 1.5rem;
+}
+
+.output .current-operand {
+    color: rgb(159, 221, 234);
+    font-size: 2.5rem;
 }
